changes sizes with variables

--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -54,9 +54,13 @@ $header-height: 54px;
 $header-button-margin: 12px;
 
 $xs-device-width: 543px;
+$xs-device-width-upper: 544px;
 $sm-device-width: 767px;
+$sm-device-width-upper: 768px;
 $md-device-width: 991px;
+$md-device-width-upper: 992px;
 $lg-device-width: 1199px;
+$lg-device-width-upper: 1200px;
 
 // Background colors
 $default-bg-color: $white;
