--- a/src/app/views/user/user-settings/user-profile/user-profile.component.scss
+++ b/src/app/views/user/user-settings/user-profile/user-profile.component.scss
@@ -15,58 +15,10 @@
       font-size: 20px;
     }
 
-    > textarea {
+    textarea {
       overflow: hidden;
       word-wrap: break-word;
       resize: none;
-    }
-
-    .profile-input-permit-radio-container {
-      display: flex;
-      margin-top: 30px;
-
-      > div {
-        text-align: center;
-        width: 90px;
-
-        > label {
-          font-size: 16px;
-          opacity: 0.7;
-
-          > span {
-            display: block;
-          }
-
-          [type="radio"] {
-            border: 0;
-            height: 1px;
-            margin: -1px;
-            padding: 0;
-            position: absolute;
-            width: 1px;
-
-            + span:before {
-              content: '';
-              display: inline-block;
-              width: 2em;
-              height: 2em;
-              border-radius: 2em;
-              /*hard border*/
-              border: 0.125em solid $color-primary-cerise;
-              box-shadow: 0 0 0 0.1em $color-primary-cerise;
-              /*light shadow*/
-              margin: 0 auto;
-              transition: 0.5s ease all;
-              /*animation here*/
-            }
-
-            &:checked + span:before {
-              background: $color-primary-cerise;
-              box-shadow: 0 0 0 0.1em $color-primary-cerise;
-            }
-          }
-        }
-      }
     }
   }
 
