--- a/src/app/views/user/user-settings/user-profile/user-profile.component.html
+++ b/src/app/views/user/user-settings/user-profile/user-profile.component.html
@@ -41,30 +41,31 @@
         <label>{{'user.profile.form.permit.type.label' | translate}} *:</label>
         <div class="input-radio-container">
           <div class="input-radio-button-container">
-            <label class="input-radio-button-label"  for="permit-type-asylum">
-            <input class="input-radio-button-input" type="radio" name="permit-type" id="permit-type-asylum" [(ngModel)]="user.currentStatus" value="asylum_seeker" />
+            <label class="input-radio-button-label" for="permit-type-asylum">
+            <input class="input-radio-button-input" type="radio" name="permit-type" id="permit-type-asylum" (focus)="serverValidationErrors.current_status = ''" [(ngModel)]="user.currentStatus" value="asylum_seeker" />
             <span class="input-radio-button-span"></span>
             {{'user.profile.form.permit.type.asylum' | translate}}</label>
           </div>
           <div class="input-radio-button-container">
-            <label class="input-radio-button-label"  for="permit-type-permanent">
-            <input class="input-radio-button-input" type="radio" name="permit-type" id="permit-type-permanent" [(ngModel)]="user.currentStatus" value="permanent_residence" />
+            <label class="input-radio-button-label" for="permit-type-permanent">
+            <input class="input-radio-button-input" type="radio" name="permit-type" id="permit-type-permanent" (focus)="serverValidationErrors.current_status = ''" [(ngModel)]="user.currentStatus" value="permanent_residence" />
             <span class="input-radio-button-span"></span>
             {{'user.profile.form.permit.type.permanent' | translate}}</label>
           </div>
           <div class="input-radio-button-container">
             <label class="input-radio-button-label" for="permit-type-temporary">
-            <input class="input-radio-button-input" type="radio" name="permit-type" id="permit-type-temporary" [(ngModel)]="user.currentStatus" value="temporary_residence_work" />
+            <input class="input-radio-button-input" type="radio" name="permit-type" id="permit-type-temporary" (focus)="serverValidationErrors.current_status = ''" [(ngModel)]="user.currentStatus" value="temporary_residence_work" />
             <span  class="input-radio-button-span"></span>
             {{'user.profile.form.permit.type.temporary' | translate}}</label>
           </div>
         </div>
         <div *ngIf="gotPermit && !user.currentStatus" class="alert alert-danger">{{'user.profile.form.permit.type.validation.required' | translate}}.</div>
+        <div *ngIf="serverValidationErrors.current_status" class="alert alert-danger">{{serverValidationErrors.current_status}}.</div>
       </div>
 
       <div *ngIf="gotPermit === 'true'" class="profile-upload-button-container">
         <input type="file" id="permit-image-filename" name="permit-image-filename" class="input-image-upload" (change)="onPermitImageFilenameChange($event)" accept="image/*">
-        <label for="permit-image-filename" class="btn-secondary btn-small btn btn-image-upload" >{{'user.profile.form.permit.upload.button' | translate}}</label>
+        <label for="permit-image-filename" class="btn-secondary btn-small btn btn-image-upload">{{'user.profile.form.permit.upload.button' | translate}}</label>
         <p>{{'user.profile.form.permit.upload.description' | translate}}</p>
         <div *ngIf="user.permitImage" class="permit-saved-message">{{'user.profile.form.permit.upload.uploaded' | translate}}</div>
       </div>
@@ -74,13 +75,15 @@
       <div class="profile-input-container">
         <label>{{'user.profile.form.languages.label' | translate}}:</label>
         <autocomplete-dropdown (dropdownListItemSelect)="onLanguageSelect($event)" [clearDestinationAfterSelection]="true" [placeholder]="'user.profile.form.languages.placeholder' | translate" [autocompleteResultLabelFunction]="namePropertyLabel" [selectedItemLabelFunction]="namePropertyLabel"
-           [getData]="getLanguagesExcludingNative()">
+            [getData]="getLanguagesExcludingNative()">
         </autocomplete-dropdown>
 
         <div class="profile-input-languages-table-container">
           <div class="profile-input-languages-table-row-container" *ngFor="let userLanguage of user.userLanguages">
             <div class="profile-input-languages-table-row-inner-container" *ngIf="userLanguage.proficiency.proficiency !== 5">
-              <div class="profile-input-languages-table-row-inner-language-container"><p>{{userLanguage.language.name}}</p></div>
+              <div class="profile-input-languages-table-row-inner-language-container">
+                <p>{{userLanguage.language.name}}</p>
+              </div>
               <div class="profile-input-languages-table-row-inner-icon-container" (click)="onRemoveUserLanguage(userLanguage)">
                 <i class="fa fa-times" aria-hidden="true"></i>
               </div>
@@ -96,14 +99,16 @@
 
       <div class="profile-input-container">
         <label>{{'user.profile.form.skills.label' | translate}}:</label>
-        <textarea class="form-control material-input" name="skills" id="skills" class="form-control material-input" autosize type="text" placeholder="{{'user.profile.form.skills.placeholder' | translate}}" [(ngModel)]="user.skills"></textarea>
+        <textarea class="form-control material-input" name="skills" id="skills" class="form-control material-input" (focus)="serverValidationErrors.competence_text = ''" autosize type="text" placeholder="{{'user.profile.form.skills.placeholder' | translate}}" [(ngModel)]="user.skills"></textarea>
+        <div *ngIf="serverValidationErrors.competence_text" class="alert alert-danger">{{serverValidationErrors.competence_text}}.</div>
       </div>
 
       <div class="profile-input-container">
         <label>{{'user.profile.form.work.experience.label' | translate}}:</label>
-        <textarea class="form-control material-input" name="workExperience" id="work-experience" class="form-control material-input" autosize type="text" placeholder="{{'user.profile.form.work.experience.placeholder' | translate}}" [(ngModel)]="user.workExperience"></textarea>
+        <textarea class="form-control material-input" name="workExperience" id="work-experience" class="form-control material-input" (focus)="serverValidationErrors.job_experience = ''" autosize type="text" placeholder="{{'user.profile.form.work.experience.placeholder' | translate}}" [(ngModel)]="user.workExperience"></textarea>
+        <div *ngIf="serverValidationErrors.job_experience" class="alert alert-danger">{{serverValidationErrors.job_experience}}.</div>
       </div>
-<!--
+      <!--
 Documents not supported yet. TODO implement when documents supported in backend.
       <div class="profile-upload-button-container">
         <button class="btn-secondary btn-small btn">{{'user.profile.form.resume.upload.button' | translate}}</button>
@@ -112,8 +117,7 @@ Documents not supported yet. TODO implement when documents supported in backend.
 -->
 
       <div class="profile-button-container">
-        <div *ngIf="errorMessage" class="error-message">{{errorMessage | translate}}</div>
-        <div *ngIf="errorCause" class="error-message">{{errorCause | translate}}</div>
+        <div *ngIf="saveFail" class="error-message">{{'user.profile.form.submit.fail' | translate}}</div>
         <div *ngIf="saveSuccess" class="save-message">{{'user.profile.form.submit.success' | translate}}</div>
         <button type="submit" [disabled]="!formValidation()" class="btn-primary btn-small btn">{{'user.profile.form.submit.button' | translate}}</button>
       </div>
