--- a/src/app/components/job-map-marker/job-map-marker.component.html
+++ b/src/app/components/job-map-marker/job-map-marker.component.html
@@ -1,8 +1,9 @@
-<sebm-google-map-marker class="job-map-marker" [latitude]="job.zipLatitude" [longitude]="job.zipLongitude" [iconUrl]="'assets/images/map_job_icon.png'" (markerClick)="mapJobMarkerClicked(job)" (mouseOver)="job.isHovered = true" (mouseOut)="job.isHovered = false">
-  <sebm-google-map-info-window [disableAutoPan]="true" [isOpen]="job.isHovered">
+<sebm-google-map-marker class="job-map-marker" [latitude]="job.zipLatitude" [longitude]="job.zipLongitude" [iconUrl]="'assets/images/map_job_icon.png'" (markerClick)="job.showJobInfo = true">
+  <sebm-google-map-info-window [disableAutoPan]="true" [isOpen]="job.showJobInfo" (infoWindowClose)="job.showJobInfo = false">
     <p class="job-map-marker-info-header"><translation-item [text]="job.name" [translation]="job.translated.name"></translation-item></p>
     <p class="job-map-marker-info-adress-field"><i class="fa fa-map-marker" aria-hidden="true"></i> {{job.address}}</p>
     <span class="job-map-marker-info-salary">{{job.amount}} {{job.hourlyPay.currency}}</span>
     <span class="job-map-marker-info-salary-per-hour">{{job.hours}}h ({{job.hourlyPay.grossSalary}} {{job.hourlyPay.currency}}/h)</span>
+    <div class="btn-secondary btn-xsmall btn job-map-marker-info-button" (click)="goToJob(job)">Go to job</div>
   </sebm-google-map-info-window>
 </sebm-google-map-marker>
