--- a/src/app/views/forgot-password/forgot-password.component.scss
+++ b/src/app/views/forgot-password/forgot-password.component.scss
@@ -19,11 +19,13 @@
   margin: 0 auto;
 
   .forgot-password-input-container {
-    padding-bottom: 1.5em;
+
+    > input {
+      border: 1px solid rgba(0, 0, 0, 0.15);
+    }
   }
 
   .forgot-password-button-container {
-    padding-bottom: 1.5em;
     text-align: center;
     .error-message {
       color: $color-cerise-500;
@@ -31,7 +33,7 @@
 
     button {
       display: block;
-      margin: 15px auto 30px;
+      margin: 10px auto;
       min-width: 200px;
     }
 
